# final-work-8

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habit/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/fixtures/: habit_fixture.json  pleasant_habit_fixture.json
user/: models.py  serializer.py  tests.py  urls.py  views.py
user/fixtures/: user_fixture.json
